--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ xgboost = "^2.1.1"
 catboost = "^1.2.7"
 ipykernel = "^6.29.5"
 category-encoders = "^2.6.3"
+requests = "^2.32.3"
+beautifulsoup4 = "^4.12.3"
 
 
 [build-system]
