--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ ipykernel = "^6.29.5"
 category-encoders = "^2.6.3"
 requests = "^2.32.3"
 beautifulsoup4 = "^4.12.3"
+lofo-importance = "^0.3.4"
 
 
 [build-system]
