--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ category-encoders = "^2.6.3"
 requests = "^2.32.3"
 beautifulsoup4 = "^4.12.3"
 lofo-importance = "^0.3.4"
+openai = "^1.46.1"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
