--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ category-encoders = "^2.6.3"
 requests = "^2.32.3"
 beautifulsoup4 = "^4.12.3"
 lofo-importance = "^0.3.4"
+pytorch-tabular = "^1.1.0"
 
 
 [build-system]
