--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ beautifulsoup4 = "^4.12.3"
 lofo-importance = "^0.3.4"
 openai = "^1.46.1"
 python-dotenv = "^1.0.1"
+tiktoken = "^0.7.0"
+pyarrow = "^17.0.0"
+fastparquet = "^2024.5.0"
 
 
 [build-system]
