--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ tiktoken = "^0.7.0"
 pyarrow = "^17.0.0"
 fastparquet = "^2024.5.0"
 lightning = "^2.4.0"
+papermill = "^2.6.0"
+typer = "^0.12.5"
 
 
 [build-system]
