--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ papermill = "^2.6.0"
 typer = "^0.12.5"
 seaborn = "^0.13.2"
 optuna = "^4.0.0"
+tensorflow = "^2.17.0"
+tensorflow-metal = "^1.1.0"
 
 
 [build-system]
