--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ seaborn = "^0.13.2"
 optuna = "^4.0.0"
 tensorflow = "^2.17.0"
 tensorflow-metal = "^1.1.0"
+cloudpickle = "3.0.0"
 
 
 [build-system]
