--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,10 +29,10 @@ papermill = "^2.6.0"
 typer = "^0.12.5"
 seaborn = "^0.13.2"
 optuna = "^4.0.0"
-tensorflow = "^2.17.0"
-tensorflow-metal = "^1.1.0"
 cloudpickle = "3.0.0"
 dill = "0.3.8"
+tensorflow-macos = "^2.16.2"
+tensorflow-metal = "^1.1.0"
 
 
 [build-system]
