--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,8 @@ tensorflow-io-gcs-filesystem = {version = ">=0.23.1", markers = "python_version 
 tensorflow-macos = "2.15.0"
 tensorflow-metal = "^1.1.0"
 deeptables = "^0.2.6"
-dask = "^2024.11.0"
+dask = {extras = ["dataframe"], version = "^2024.11.2"}
+scikit-learn = "1.2.2"
 
 
 [build-system]
