--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,9 +37,10 @@ tensorflow-macos = "2.15.0"
 tensorflow-metal = "^1.1.0"
 deeptables = "^0.2.6"
 dask = {extras = ["dataframe"], version = "^2024.11.2"}
-scikit-learn = "1.2.2"
+scikit-learn = "^1.3.0"
 dvc = "^3.56.0"
 dvc-ssh = "^4.1.1"
+pytorch-tabular = "^1.1.0"
 
 
 [build-system]
