--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,8 @@ scikit-learn = "^1.3.0"
 dvc = "^3.56.0"
 dvc-ssh = "^4.1.1"
 pytorch-tabular = "^1.1.0"
+pytorch-frame = "^0.2.3"
+torchinfo = "^1.8.0"
 
 
 [build-system]
